updated opf with annotation transfer

--- a/6d4cfec77a2f41f4bc782b39064e64df.opf/meta.yml
+++ b/6d4cfec77a2f41f4bc782b39064e64df.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     8913545315f345689ad53a1b9ad98c5b:
       base_file: v025.txt
       image_group_id: I1PD95870
-      title: ''
+      title: རྡོ་རྗེ་ཁྲོ་བོ་གཏུམ་པོ་ལྷ་ལྔ་པ་ཞེས་བྱ་བའི་དཀྱིལ་འཁོར་གྱི་ཆོ་ག།
       total_pages: 1853
       volume_number: 25
